# fastapisimples

./: .gitignore  README.md  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
db/: db_setup.py
